--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"   "
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.14",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
 }
