--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\" \"npm run copy:assets\"",
+    "copy:assets": "cpx 'src/assets/**' 'dist/assets'",
     "build": "tsc"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "@types/node": "^18.11.14",
     "@types/sharp": "^0.31.0",
     "concurrently": "^7.6.0",
+    "cpx": "^1.5.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
