--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\" \"npm run copy:assets\"",
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/src/index.js\" \"npm run copy:assets\"",
     "copy:assets": "cpx 'src/assets/**' 'dist/assets'",
+    "test": "npm run build && jasmine",
     "build": "tsc"
   },
   "keywords": [],
@@ -18,10 +18,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.14",
     "@types/sharp": "^0.31.0",
     "concurrently": "^7.6.0",
     "cpx": "^1.5.0",
+    "jasmine": "^4.5.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
