--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/src/index.js\" \"npm run copy:assets\"",
     "copy:assets": "cpx 'src/assets/**' 'dist/assets' && cpx 'tests/assets/**' 'dist/tests/assets'",
     "test": "npm run build && jasmine",
-    "build": "tsc"
+    "build": "tsc && npm run copy:assets"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +21,13 @@
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.14",
     "@types/sharp": "^0.31.0",
+    "@types/supertest": "^2.0.12",
     "concurrently": "^7.6.0",
     "cpx": "^1.5.0",
     "jasmine": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "typescript": "^4.9.4"
   }
 }
